--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,6 @@
-name: Publish Docker Image
+name: one-api docker image
 
 on:
-  schedule:
-    - cron: '0 16 * * *'
-  workflow_dispatch:
-  release:
-    types: [published]
   push:
     branches:
       - main
@@ -15,26 +10,44 @@ on:
       - "README.md"
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+        uses: actions/checkout@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
+          fetch-depth: 0
+      - name: Save dev version info
+        run: |
+          HASH=$(git rev-parse --short=7 HEAD)
+          echo "dev-$HASH" > VERSION
+      - name: Save Tag version info
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          git describe --tags > VERSION
+      - uses: actions/setup-node@v3
         with:
-          images: yangclivia/one-api
-          tags: |
-            type=raw,value=latest
-            type=ref,event=tag
+          node-version: 16
+      - name: Build Frontend
+        env:
+          CI: ""
+        run: |
+          export VERSION=$(cat VERSION)
+          cd web
+          yarn install
+          REACT_APP_VERSION=$VERSION yarn run build
+          cd ..
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ">=1.18.0"
+      - name: Build Backend (amd64)
+        run: |
+          go mod download
+          go build -ldflags "-s -w -X 'one-api/common.Version=$(cat VERSION)' -extldflags '-static'" -o one-api-amd64
 
       - name: Build Backend (arm64)
         run: |
@@ -43,10 +56,10 @@ jobs:
           sudo apt-get install gcc-aarch64-linux-gnu
           CC=aarch64-linux-gnu-gcc CGO_ENABLED=1 GOOS=linux GOARCH=arm64 go build -ldflags "-s -w -X 'one-api/common.Version=$(cat VERSION)' -extldflags '-static'" -o one-api-arm64
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -59,9 +72,17 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: docker.io
-          username: ${{ vars.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }} # Replace with your Docker Hub password secret
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} # Replace with your Docker Hub password secret
 
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ghcr.io/${{ github.repository }}
+            docker.io/${{ secrets.DOCKERHUB_TOKEN }}/one-api
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=dev,enable=${{ github.ref == 'refs/heads/main' }}
@@ -72,9 +93,12 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
+          build-args: |
+            COMMIT_SHA=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          file: Dockerfile-action
