--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - main
-    tags:
-      - "v*"
-    paths-ignore:
-      - "README.md"
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-push:
