--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,12 @@
 name: one-api docker image
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+    tags:
+      - v*
 
 jobs:
   build-and-push:
