--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -92,7 +92,7 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             ghcr.io/${{ github.repository }}
-            docker.io/yangclivia/one-api
+            # docker.io/yangclivia/one-api
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=dev,enable=${{ github.ref == 'refs/heads/main' }}
